--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : jekyllbootstrap
+      short_name : hacknorthwestern
     livefyre :
       site_id : 123
     intensedebate :
